--- a/views/user/orderConfirmation.ejs
+++ b/views/user/orderConfirmation.ejs
@@ -50,7 +50,7 @@
                             </p>
                             <p><strong>Payment Status:</strong>
                               <% if (order.status === 'retry' ) { %>
-                                <button id="retryButton" class=" btn-default btn-sm">Retry Payment</button>
+                                <button id="retryButton" class=" btn-default btn-sm" >Retry Payment</button>
                 
                                 <% } else { %>
                                   <%= order.status %>
@@ -113,3 +113,42 @@
 
         <%- include('../layouts/footer.ejs') %>
             <%- include('../layouts/script.ejs') %>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<script>
+    document.getElementById('retryButton').addEventListener('click',function (){
+        var orderId = " <%= order._id %>";
+        Swal.fire({
+                    title: 'Are you sure?',
+                    text: "You won't be able to retry the payment!",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonText: 'Yes, retry!',
+                    cancelButtonText: 'No, cancel!'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        fetch('/retryPayment/' + orderId)
+                          .then(response => response.json())
+                          .then(data => {
+                                if (data.success) {
+                                    Swal.fire(
+                                        'Success!',
+                                        'Payment retried successfully.',
+                                        'success'
+                                    );
+                                    setTimeout(() => {
+                                        window.location= URL
+                                    }, 3000);
+                                } else {
+                                    Swal.fire(
+                                        'Error!',
+                                        'Failed to retry payment.',
+                                        'error'
+                                    );
+                                }
+                           })
+                          .catch(error => console.error('Error retrying payment:', error));
+                    }
+                });
+            });
+</script>
